[project]
name = "banyan-trees"
version = "0.1.0"
description = ""
authors = [
    {name = "Sumit Haswar",email = "sumithaswar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "banyan_trees", from = "src"}]


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
